# mods

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
app/: CMakeLists.txt
lib/: CMakeLists.txt  math.cppm
src/: main.cpp
